Bug overflow navbar

--- a/css/style.css
+++ b/css/style.css
@@ -268,17 +268,17 @@ footer {
 	}
 
 	.nav-contain {
-		top: 50px;
-		right: 0;
+		top: -500px;
+		left: 0px;
 		position: absolute;
-		width: 0vw;
 		opacity: 0;
+		width: 100vw;
 		transition: all 0.5s ease;
 	}
 
 	.nav-contain.nav-open {
-		width: 100vw;
 		opacity: 1;
+		top: 50px;
 	}
 
 	#nav_list {
